--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,16 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "php": ">=8.1",
+    "php": ">=8.2",
     "ext-ctype": "*",
     "ext-iconv": "*",
     "doctrine/doctrine-bundle": "^2.9",
     "doctrine/doctrine-migrations-bundle": "^3.2",
     "doctrine/orm": "^2.15",
     "easycorp/easyadmin-bundle": "^4.6",
+    "fakerphp/faker": "^1.23",
     "friendsofsymfony/jsrouting-bundle": "^3.2",
+    "knplabs/knp-paginator-bundle": "^6.2",
     "sensio/framework-extra-bundle": "^6.2",
     "symfony/console": "6.2.*",
     "symfony/dotenv": "6.2.*",
@@ -23,9 +25,13 @@
     "symfony/webpack-encore-bundle": "^2.0",
     "symfony/yaml": "6.2.*",
     "twig/extra-bundle": "^2.12|^3.0",
-    "twig/twig": "^2.12|^3.0"
+    "twig/twig": "^2.12|^3.0",
+    "upyun/sdk": "^3.5",
+    "ext-swoole": "*",
+    "ext-dom": "*"
   },
   "require-dev": {
+    "dbrekelmans/bdi": "^1.0",
     "doctrine/doctrine-fixtures-bundle": "^3.4",
     "phpunit/phpunit": "^9.5",
     "symfony/browser-kit": "6.2.*",
@@ -33,6 +39,7 @@
     "symfony/debug-bundle": "6.2.*",
     "symfony/maker-bundle": "^1.48",
     "symfony/monolog-bundle": "^3.0",
+    "symfony/panther": "^2.1",
     "symfony/phpunit-bridge": "^6.3",
     "symfony/stopwatch": "6.2.*",
     "symfony/web-profiler-bundle": "6.2.*"
