--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,9 @@
 parameters:
   base_path: 'uploads/images'
   upload_dir: 'public/%base_path%'
+  max_comment_level: 5
+  max_post_per_page: 5
+  local: 'zh_CN'
 services:
   # default configuration for services in *this* file
   _defaults:
