--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -32,4 +32,8 @@
     <listeners>
         <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener"/>
     </listeners>
+
+    <extensions>
+        <extension class="Symfony\Component\Panther\ServerExtension"/>
+    </extensions>
 </phpunit>
